RESOLVED FIXED258082
[WebGPU] PipelineLayout::makeInvalid may call clear on empty optional value
https://bugs.webkit.org/show_bug.cgi?id=258082
Summary [WebGPU] PipelineLayout::makeInvalid may call clear on empty optional value
Mike Wyrzykowski
Reported 2023-06-14 11:06:01 PDT
[WebGPU] PipelineLayout::makeInvalid may call clear on empty optional value
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-14 11:06:35 PDT
Mike Wyrzykowski
Comment 2 2023-06-14 11:10:15 PDT
EWS
Comment 3 2023-06-14 20:51:58 PDT
Committed 265179@main (e35c70f6721c): <https://commits.webkit.org/265179@main> Reviewed commits have been landed. Closing PR #14962 and removing active labels.
Mike Wyrzykowski
Comment 4 2023-06-14 21:41:56 PDT
EWS
Comment 5 2023-06-14 23:20:47 PDT
Committed 265183@main (55abb9066ef5): <https://commits.webkit.org/265183@main> Reviewed commits have been landed. Closing PR #14990 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.