[WebGPU] PipelineLayout::makeInvalid may call clear on empty optional value https://bugs.webkit.org/show_bug.cgi?id=258082 <radar://110786601>

Reviewed by Dan Glastonbury.

265139@main made m_bindGroupLayouts an optional, but a check to make
sure the value exists was missing.

* Source/WebGPU/WebGPU/PipelineLayout.mm:
(WebGPU::PipelineLayout::makeInvalid):

Canonical link: https://commits.webkit.org/265179@main