Source/WebGPU/WebGPU/PipelineLayout.h
@@ -60,7 +60,7 @@ public:
     bool operator==(const PipelineLayout&) const;
 
     bool isAutoLayout() const { return !m_bindGroupLayouts.has_value(); }
-    size_t numberOfBindGroupLayouts() const { return m_bindGroupLayouts->size(); }
+    size_t numberOfBindGroupLayouts() const { return m_bindGroupLayouts ? m_bindGroupLayouts->size() : 0; }
     BindGroupLayout& bindGroupLayout(size_t) const;
 
     Device& device() const { return m_device; }
